# DXGI_FFmpeg_Capture

./: .gitignore  CMakeLists.txt  README.md  main.cpp
